# mumble-docker

./: Cargo.toml  Dockerfile  LICENSE  README.md  acme_install_cert.sh  acme_manage_cert.sh  copy-libs.sh  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  supervisord.conf
.github/workflows/: build.yml  build_and_publish.yml  ci.yml  manual_dispatch.yml  upstream_release.yml
config/: ice.ini  murmur.ini
scripts/: build.sh  choose_qt_version.sh  clone.sh  copy_one_of.sh  install_qt.sh  install_qt_dev.sh
src/: main.rs
