[package]
name = "mumble-docker"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
libc = "0.2.152"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
